- Added New Blogs

--- a/slpc.html
+++ b/slpc.html
@@ -98,15 +98,131 @@
 
       <!-- Blog Post -->
       <div class="row">
+        <div class="col-lg-8">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost92">01010011 01001100 01010000 01000011 00100000 00111101 00100000 01000101 01010101 01000111 01000101 01001110 01001001 01000011</a>
+                </h4>
+              </div>
+              <div id="blogpost92" class="panel-collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>01010011 01001100 01010000 01000011 00100000 00111101 00100000 01000101 01010101 01000111 01000101 01001110 01001001 01000011</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    X
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 11 May, 6102</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">FR1D3Y,</p>
+                  <p>THE WAKE UP CALL</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost93">Week 1 RECAP: Wasp’s Nest, and the new Swinlympia record!</a>
+                </h4>
+              </div>
+              <div id="blogpost93" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>Week 1 RECAP: Wasp’s Nest, and the new Swinlympia record!</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 10 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">Greetings competitors,</p>
+                  <p>Congratulations to all those who made it out to the opening games of the Swinlympia yesterday afternoon. A solid attendance overall across all events, with Wasp’s Nest drawing the most attention.</p>
+                  <p>Blue Team, lead by Patrick Lunney’s historic performance, put on a clinic as they tore apart the competition, blowing Green Team (lead by SLPC’s very best) out 17 to 11.</p>
+                  <p>The story of the day is walk on sensation, Patrick Lunney. No prior Swinlympia record, his first time performance was one for the history books as he sets a Wasp’s Nest individual scoring record of 13 points, a record previously held by none other than current Swinlympia Champion, David Yang.</p>
+                  <p>When interviewed by our very own Damienl O’Neil, David had this to say to the new record holder.</p>
+                  <p>‘He’s definitely exciting. There were a few spots throughout the game where he would stare me down before scoring, and I just though ‘Kid, if i was still able to compete, i’d make you eat your words’. It’s like you said, Dam, he’s a rookie and I’ve never seen him before in my life. From rags to riches. I’m excited for how he holds up during some of the more communication based games.’</p>
+                  <p>Lunney denied our request for a post game interview, and went on to ask for the footage to be removed.</p>
+                  <p>Indeed, strange behaviour from a potential Swinlympia All-Time Great. Tune in next Monday the 16th as Swinlympia hosts Blackout & Corridor Sprint!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost94">Mysterious Mr. X sightings</a>
+                </h4>
+              </div>
+              <div id="blogpost94" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>Mysterious Mr. X sightings</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 4 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">Greetings competitors,</p>
+                  <p>We are mere days away from the first events of the 2016 Swinlympia, taking place next monday the 9th of May, kicking things off with Wasp’s Nest in the Central Gardens.</p>
+                  <p>Making waves this week however are the potential sightings of the notorious ‘Mr. X’ figure seen around campus. As we know, the FASG and their propaganda has been prevalent around the Swinburne campus, their posters appearing often alongside the SLPC’s promotion of the Swinlympia events.</p>
+                  <p>But alongside this, a man dressed in a black morph suit has been seen around campus, particularly outside of The George, spreading rumours that ‘the end of the world is near.’</p>
+                  <p>Swinlympia Champion, David Yang, at this time has no comment on the Mr. X sightings, and has expressed in earlier interviews that he and the SLPC are ‘dealing with the matter personally.’ assuring the community that they need not worry.</p>
+                  <p>Well, we are beginning to worry, as the Mr. X sightings continue to grow, as well as the FASG fanbase. As things begin to pick up, I urge you to stay cautious competitors.</p>
+                  <p>Games begin Monday the 9th.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="panel-group">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" href="#blogpost">~ 0pen ur 3yes ‘Competitors’  ~</a>
+                  <a data-toggle="collapse" href="#blogpost95">~ 0pen ur 3yes ‘Competitors’  ~</a>
                 </h4>
               </div>
-              <div id="blogpost" class="panel-collapse">
+              <div id="blogpost95" class="panel-collapse collapse">
                 <div class="panel-body fasghack">
                   <!-- Title -->
                   <h1>~ 0pen ur 3yes ‘Competitors’  ~</h1>
