--- a/slpc.html
+++ b/slpc.html
@@ -98,7 +98,7 @@
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
           <div class="panel-group">
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -133,7 +133,7 @@
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
           <div class="panel-group">
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -174,7 +174,7 @@
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
           <div class="panel-group">
             <div class="panel panel-default">
               <div class="panel-heading">
