- Fixed Navbars across all pages

--- a/slpc.html
+++ b/slpc.html
@@ -49,6 +49,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="slpc.html">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="slpcswinlympia.html">Swinlympia</a></li>
+            <li><a href="slpcresults.html">Results</a></li>
             <li><a href="slpcabout.html">About Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
