--- a/slpcresults.html
+++ b/slpcresults.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="slpc.html">Home</a></li>
-            <li><a href="slpcswinlympia.html">Home</a></li>
+            <li><a href="slpcswinlympia.html">Swinlympia</a></li>
             <li class="active"><a href="slpcresults.html">Results<span class="sr-only">(current)</span></a></li>
             <li><a href="slpcabout.html">About Us</a></li>
           </ul>
