--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -45,6 +45,7 @@
           <ul class="nav navbar-nav">
             <li><a href="slpc.html">Home</a></li>
             <li class="active"><a href="slpcswinlympia.html">Swinlympia<span class="sr-only">(current)</span></a></li>
+            <li><a href="slpcresults.html">Results</a></li>
             <li><a href="slpcabout.html">About Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
