--- a/slpc.html
+++ b/slpc.html
@@ -104,10 +104,92 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost90">~ r3bELLion ~</a>
+                </h4>
+              </div>
+              <div id="blogpost90" class="panel-collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>~ r3bELLion ~</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    X
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> xx/xx/xx</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">The end of this world… looks closer.</p>
+                  <p>In the eyes of them… who want to REPENT.</p>
+                  <p>THE END BE NOT NIGH, FOR HAROLD AND The CH@MP CAN BE STOPPeD.</p>
+                  <p>Join me, where X… marks the spot. ~~~ 16/5/16 THE GARDENS OF CENTRAL SWINBURNE</p>
+                  <a class="btn btn-block btn-social btn-soundcloud fblike" href="https://soundcloud.com/mr_x_marks_the_spot/fr1d3y-thetruthwillsetyoufree-the-call-x">
+                    <span class="fa fa-soundcloud"></span>fr1d3y-thetruthwillsetyoufree-the-call-x
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost91">Post 3SSR Radio Press Conference</a>
+                </h4>
+              </div>
+              <div id="blogpost91" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>Post 3SSR Radio Press Conference</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 13 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">Greetings competitors, I’m Felicity Boveheart, coming to you live from the post radio press conference, second floor of The George building.</p>
+                  <p>4:04pm - After sitting down with the ‘An Outrage’ presenter, Peter Matthews, David has taken the podium, ready to answer our questions.</p>
+                  <p>4:08pm - A question from Twitter comes in, ‘Mr. Champ, how do you feel about Mr. X? His attacks seem more persistent’ - @SarahYeon8</p>
+      	          <p>‘I try to pay as little attention as possible when it comes to the neigh sayers, for they demand very little. I ask, once again, where is the proof? Swinlympia has been a consistent Swinburne institution for the last decade, and it will continue to be for the decades following.’</p>
+                  <p>4:15pm - ‘Good afternoon Champ, Daniel O’Neil, Sports reporter and editor for The Daily Burne. We spoke briefly on Monday at the Wasp’s Nest event, I was just wanting to get some word on next Monday's events, what should we be expecting?’</p>
+                  <p>	‘Daniel, looking sharp as always. Well next Monday, we will be running a double feature - Blackout and Corridor Sprint - as well as discus, campus relay, and over to the Aquatic Center for the swimming portions of the Swinlympia. What should you be expecting? Well what I’m expecting is hopefully a more dominant performance from the SLPC representatives. I think the spectacle around this Patrick Lunney was just a once off, but we’ll see… anything can happen in these games, Dan.’</p>
+                  <p>4:21pm - The press conference is cut short after a man wearing a suit covering a black morph suit jumps up and shouts at David, calling him out for his deceit.</p>
+                  <p>4:22pm - The FASG logo appears onto the projector, and a soundbite from a telephone call between David and Harold plays in the background. David rushes out with the belt, tailed by his security staff.</p>
+                  <p>I don’t believe what I just heard. If this is true, then… I don’t know.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
                   <a data-toggle="collapse" href="#blogpost92">01010011 01001100 01010000 01000011 00100000 00111101 00100000 01000101 01010101 01000111 01000101 01001110 01001001 01000011</a>
                 </h4>
               </div>
-              <div id="blogpost92" class="panel-collapse">
+              <div id="blogpost92" class="panel-collapse collapse">
                 <div class="panel-body fasghack">
                   <!-- Title -->
                   <h1>01010011 01001100 01010000 01000011 00100000 00111101 00100000 01000101 01010101 01000111 01000101 01001110 01001001 01000011</h1>
