- Updated Game Details

--- a/slpc.html
+++ b/slpc.html
@@ -89,7 +89,7 @@
         <div class="col-lg-8 col-lg-offset-2 col-lg-offset-2">
           <h2 id="swinlympia">Swinlympia 2016</h2>
           <h3 class="swinlympiatext">Next Play Session:</h3>
-          <h4 class="swinlympiatext"><b>Corridor Sprint - May 16 - 1:30pm @ Wakefield Gardens</b></h4>
+          <h3 class="swinlympiatext"><b>Preyseeker - May 23 - 1:30pm - 2:30pm<br>Swinlympia Booth, Outside The George</b></h4>
           <p class="swinlympiatext">Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
           <p
           <p><a class="btn btn-default center-block" href="slpcswinlympia.html" role="button" id="learnmore">Learn more &raquo;</a></p>
