- Added Blogs - Added Results

--- a/slpc.html
+++ b/slpc.html
@@ -104,10 +104,93 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost88">PUBLIC SERVICE ANNOUNCEMENT - The Games Continue</a>
+                </h4>
+              </div>
+              <div id="blogpost88" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>PUBLIC SERVICE ANNOUNCEMENT - The Games Continue</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    David Yang
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 18 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">What does Felicity normally say… Greetings competitors?</p>
+                  <p>Greetings… combatants.</p>
+                  <p>I just thought I’d take some time out of my already busy schedule to address the elephant in the room. Are we, the SLPC, using the Swinlympia as a front for a eugenics program, in order to populate our new world with the best possible specimens?</p>
+                  <p>Eh, we are. The time for beating around the bush is over.</p>
+                  <p>Swinlympia has a long standing tradition of awarding the best competitors with esteem and recognition, but for too long has the world been in need of a makeover. Our earthly resources are depleting every second, and are being used by those who are unworthy, those who have no value and produce nothing for society.</p>
+                  <p>Is what we’re doing wrong? No!</p>
+                  <p>We are trying to help you, and that is what that fool Mr. X just doesn’t understand. The Swinlympia is your vessel, WE ARE GIVING YOU A CHANCE TO JOIN US.</p>
+                  <p>The games are pushing forward. There are no other options. Thrive to Survive, otherwise…</p>
+                  <p>.... Be left behind</p>
+                  <p>#ChampOut</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost89">Swinlympia - Friendly competition or The Eugenics Noah’s Ark?</a>
+                </h4>
+              </div>
+              <div id="blogpost89" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>Swinlympia - Friendly competition or The Eugenics Noah’s Ark?</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 17 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">Greetings competitors,</p>
+                  <p>This week’s Swinlympia double feature left more questions than answers as the competitors were left speechless by the appearance of Mr. X, who made his presence felt, disrupting the games and costing the SLPC a victory in Corridor Sprint. Damien will touch on the games in his blog later, but what I’m left asking is - Is Mr. X right? Is this Swinlympia the last of long line of tradition, and are they ushering in the so called ‘New World’?</p>
+                  <p>Champion David Yang didn’t leave much to the imagination when he had to address Mr. X’s interruptions live on commentary, often spouting out ‘This means nothing X man! You aren’t worthy!’</p>
+                  <p>After the Corridor Sprint event, one of the competitor’s recalls overhearing a conversation between Gamemaster Aidan and Champion Yang as they discuss the SLPC loss.</p>
+                  <p>     ‘That Gamemaster guy said something along the lines of “It’s just one loss, David. There’s nothing to worry about” and then I distinctly remember hearing David say “If our own chosen competitors can’t win a simple game, then what makes them worthy, Aidan? Thrive to Survive, if they can’t beat that X man, then they can die with the rest of them!”’</p>
+                  <p>‘Thrive to Survive’... If Mr. X is right, then winning these games is more than just about glory.</p>
+                  <p>It’s about our very survival…</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
                   <a data-toggle="collapse" href="#blogpost90">~ r3bELLion ~</a>
                 </h4>
               </div>
-              <div id="blogpost90" class="panel-collapse">
+              <div id="blogpost90" class="panel-collapse collapse">
                 <div class="panel-body fasghack">
                   <!-- Title -->
                   <h1>~ r3bELLion ~</h1>
