--- a/slpcresults.html
+++ b/slpcresults.html
@@ -93,14 +93,17 @@
                 <p><b>Wasp’s Nest:</b></p>
                 <p>Winner - Blue team (17 points)</p>
                 <p>MVP - Patrick Lunney</p>
-                <u><p>Distance traveled - 1st - Patrick Lunney (1.8 km)</p></u>
+                <p class="resultsheading">Distance traveled</p>
+                <p>1st - Patrick Lunney (1.8 km)</p>
                 <p>2nd - Gordon Wu (1.2 km)</p>
                 <p>3rd - Daniel Douch (1 km)</p>
-                <u><p>Total Completes - 1st - Patrick Lunney (13 points*)</p></u>
+                <p class="resultsheading">Total Completes</p>
+                <p>1st - Patrick Lunney (13 points*)</p>
                 <p>2nd - Daniel Douch (5 points)</p>
                 <p>3rd - Gordon Wu (4 points)</p>
                 <em><p>* represents Swinlympia Record</p></em>
-                <u><p>Blocks - 1st - Sarah Bridges (7 tags)</p></u>
+                <p class="resultsheading">Blocks</p>
+                <p>1st - Sarah Bridges (7 tags)</p>
                 <p>2nd - Jonathon Page (4 tags)</p>
                 <p>3rd - Jordan Dungey (3 tags)</p>
                 <br>
@@ -118,6 +121,29 @@
                 <p>1st - Patrick Lunney (9 seconds)</p>
                 <p>2nd - Matthew Dodson-Geary (12.9 seconds)</p>
                 <p>3rd - Lucas Eng (13.4 seconds)</p>
+              </div>
+
+              <br>
+              
+            <h2>Week 2</h2>
+              <div id="resultswk2">
+                <p><b>Blackout:</b></p>
+                <p class="resultsheading">Winner</p>
+                <p>SLPC (Green Team) (winning 5 out of the total 8 rounds)</p>
+                <p>MVP: Gordon Wu (winning 2 out of his 3 rounds)</p>
+                <br>
+                <p><b>Corridor Sprint:</b></p>
+                <p class="resultsheading">Winner</p>
+                <p>Blue Team (26 points over 2 rounds)</p>
+                <p>MVP: Mr. X - By overall distraction to the SLPC team, his defensive plays pushed Blue team over the line to secure the victory.</p>
+                <p class="resultsheading">Completed Runs</p>
+                <p>1st - Nick Fowler (8 points)</p>
+                <p>2nd - Alec Attwood (6 points)</p>
+                <p>3rd - Mr. X (5 points)</p>
+                <p class="resultsheading">Outs</p>
+                <p>1st - Kevin Singh (9 outs)</p>
+                <p>2nd - Mr. X (8 outs)</p>
+                <p>3rd - Gordon Wu (4 outs)</p>
               </div>
        </div>
       </div>
