- Added New Blogs - Changed 'Campus' to 'Suot City'

--- a/slpc.html
+++ b/slpc.html
@@ -104,6 +104,88 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost86">/My.Job.Is.Done/</a>
+                </h4>
+              </div>
+              <div id="blogpost86" class="panel-collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>/My.Job.Is.Done/</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    X
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 48/02/2084</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">They tried.</p>
+                  <p>They tried.</p>
+                  <p>But I won.</p>
+                  <p>I’ll see you on Tuesday Mr. Champion man. The end is near.</p>
+                  <p>For you.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost87">The end is near, but is there still hope?</a>
+                </h4>
+              </div>
+              <div id="blogpost87" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>The end is near, but is there still hope?</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    -	Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 24 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">Greetings competitors…</p>
+                  <p>Actually, it feels wrong to even address you as such.</p>
+                  <p>Good evening members of the community</p>
+                  <p>As you all should probably know by now, our questions have been answered and I guess our biggest fear has been confirmed - The end is near, and being fully funded and ushered by the SLPC and Swinlympia.</p>
+                  <p>I, for one, speak for the rest of us here at The Daily Burne when I tell you that we had no idea, no inkling, about what was happening behind the scenes. When we ran our cover piece at the start of this year's games about the return of Swinlympia, we prepared ourselves for some controversy with the SLPC heading the events, but never at this kind of magnitude.</p>
+                  <p>During this week's PreySeeker event, Swinlympia Champion David Yang was seen talking with one Mr. Slater, a representative sent down from the governing body of Suot City. They seemed to have a pleasant discussion, given the situation at hand with Mr. X roaming around campus.</p>
+                  <p>When asked about the conversation, David had this in response.</p>
+                  <p>	‘He (Mr. Slater) was just concerned about Mr. X’s involvement in the games, and so am I. The end is rapidly approaching and we are trying our hardest to provide enjoyable games. You all understand the importance of these games, and anyone trying to help Mr. X is only momentarily slowing the inevitable.’</p>
+                  <p>David had no further response when asked about his current status with the SLPC.</p>
+                  <p>For the time that we have left, all of us here at The Daily Burne will still be covering the remainder of the games.</p>
+                  <p>Good luck to those fighting for their survival, and may we remain ever hopeful that this… might all just be some sick dream.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
                   <a data-toggle="collapse" href="#blogpost88">PUBLIC SERVICE ANNOUNCEMENT - The Games Continue</a>
                 </h4>
               </div>
@@ -366,8 +448,8 @@
                   <!-- Post Content -->
                   <p class="lead">Greetings competitors,</p>
                   <p>We are mere days away from the first events of the 2016 Swinlympia, taking place next monday the 9th of May, kicking things off with Wasp’s Nest in the Central Gardens.</p>
-                  <p>Making waves this week however are the potential sightings of the notorious ‘Mr. X’ figure seen around campus. As we know, the FASG and their propaganda has been prevalent around the Swinburne campus, their posters appearing often alongside the SLPC’s promotion of the Swinlympia events.</p>
-                  <p>But alongside this, a man dressed in a black morph suit has been seen around campus, particularly outside of The George, spreading rumours that ‘the end of the world is near.’</p>
+                  <p>Making waves this week however are the potential sightings of the notorious ‘Mr. X’ figure seen around Suot City. As we know, the FASG and their propaganda has been prevalent around Suot City, their posters appearing often alongside the SLPC’s promotion of the Swinlympia events.</p>
+                  <p>But alongside this, a man dressed in a black morph suit has been seen around Suot City, particularly outside of The George, spreading rumours that ‘the end of the world is near.’</p>
                   <p>Swinlympia Champion, David Yang, at this time has no comment on the Mr. X sightings, and has expressed in earlier interviews that he and the SLPC are ‘dealing with the matter personally.’ assuring the community that they need not worry.</p>
                   <p>Well, we are beginning to worry, as the Mr. X sightings continue to grow, as well as the FASG fanbase. As things begin to pick up, I urge you to stay cautious competitors.</p>
                   <p>Games begin Monday the 9th.</p>
@@ -445,7 +527,7 @@
                   <!-- Post Content -->
                   <p class="lead">Greetings competitors,</p>
                   <p>Following yesterdays official Swinlympia Press Conference, the games are now in full swing.</p>
-                  <p>Champion Yang, as well as other promoters from the SLPC will be around campus over the following weeks to help further promote the events. Be wary though, as during the press conference, an altercation broke out between Mr Yang and a riled up aggressor in the crowd.</p>
+                  <p>Champion Yang, as well as other promoters from the SLPC will be around Suot City over the following weeks to help further promote the events. Be wary though, as during the press conference, an altercation broke out between Mr Yang and a riled up aggressor in the crowd.</p>
                   <p>An eyewitness, who wished to remain anonymous, stated that ‘He just got up and preached that this whole Swinlympia ordeal was a lie. Some sort of eugenics thing, I think I heard him say. Such gibberish, he must be crazy, he even tried to take a swing at the Champion’.<p>
                   <p>We were unable to receive any comments from the attacker at this time. His whereabouts remain unknown.</p>
                   <p>Without any facts, all I can say is that this pure bile is nonsense, but we here at The Daily Burne pride ourselves on reporting an unbiased story for we fight for the truth.</p>
