--- a/slpc.html
+++ b/slpc.html
@@ -87,11 +87,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-lg-offset-2">
-          <h2 id="swinlympia">Swinlympia 2016</h2>
-          <h3 class="swinlympiatext">Next Play Session:</h3>
+          <h2 id="doomsday">DOOMSDAY</h2>
           <h3 class="swinlympiatext"><b>The Great Hunt & More - May 31 - 10am - 2pm<br>On Campus</b></h4>
-          <p class="swinlympiatext">Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
-          <p
+          <p class="swinlympiatext">Doomsday is coming on Tuesday. It's now live or die - collect all the resources you can before time's out.</p>
+          <p class="swinlympiatext">The side that collects more resources can protect themselves from the harsh wastelands, and rebuild their society over time.<p>
+          <p class="swinlympiatext">Both sides are fighting for survival, if SLPC win they get to usher in the new era with their elite human race. If FASG win they get to live another day, and rebuild a new society without the corruption.</p>
           <p><a class="btn btn-default center-block" href="slpcswinlympia.html" role="button" id="learnmore">Learn more &raquo;</a></p>
         </div>
 
