- Final Blogs - GreatHunt Removal Changes

--- a/slpc.html
+++ b/slpc.html
@@ -87,12 +87,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-lg-offset-2">
-          <h2 id="doomsday">DOOMSDAY</h2>
-          <h3 class="swinlympiatext"><b>The Great Hunt & More - May 31 - 10am - 2pm<br>On Campus</b></h4>
-          <p class="swinlympiatext">Doomsday is coming on Tuesday. It's now live or die - collect all the resources you can before time's out.</p>
-          <p class="swinlympiatext">The side that collects more resources can protect themselves from the harsh wastelands, and rebuild their society over time.<p>
-          <p class="swinlympiatext">Both sides are fighting for survival, if SLPC win they get to usher in the new era with their elite human race. If FASG win they get to live another day, and rebuild a new society without the corruption.</p>
-          <p><a class="btn btn-default center-block" href="slpcswinlympia.html" role="button" id="learnmore">Learn more &raquo;</a></p>
+          <h2 id="doomsday">FASG HAS BEEN DEFEATED!</h2>
+          <h3 class="swinlympiatext"><b>The SPLC live on. The new world smiles upon us.</b></h4>
         </div>
 
     <br>
@@ -104,10 +100,107 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost84">You all… failed</a>
+                </h4>
+              </div>
+              <div id="blogpost84" class="panel-collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>You all… failed</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    David Yang
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 16 Aug, 2018</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">Well well well.</p>
+                  <p>It took us two years to access The Daily Burne archives, two years well worth the wait.</p>
+                  <p>I know there’s no point writing this. There's no one out there to read it. I guess I’m just using this as a means of celebration.</p>
+                  <p>We won. You failed, Mr. X. In fact, everyone failed.</p>
+                  <p>When I joined Harold and the SLPC, we had a vision. ‘The perfect human to begin a new world’ and while we found several worthy enough of it, we honestly thought there might be more.</p>
+                  <p>The nuclear winter was over 2 years ago. WE TOLD YOU IT WAS COMING, YET YOU TREATED THE SWINLYMPIA AS A JOKE!</p>
+                  <p>Well the jokes on you, and here I am, sitting across from Harold, Gordon and the other members of the New World… laughing. Laughing at all of you!</p>
+                  <p>My only regret is that there is no one else alive to laugh with us.</p>
+                  <p>The Great Hunt only proved to be a massive success for us. You may have recruited people to help you look, Mr. X… but even with the resources you found… you still offered them NOTHING!</p>
+                  <p>Nothing that will help them survive.</p>
+                  <p>They now sit here with us, laughing at your failures, warmed by the clothes you helped them find, nourished by the food you helped them search for.
+                    But when you found it, did you expect them to live off it… with you?</p>
+                  <p>It was always going to be this way.
+                    You were weak, and I was strong. When they saw the cold, and looked their fate in the eyes, they didn’t see you leading them… they saw what you failed to stop, and realised they needed us.</p>
+                  <p>Alas, all of this doesn’t matter.</p>
+                  <p>Tomorrow, we go back into cryo.</p>
+                  <p>Maybe one day, the world will call upon us. The perfect humans, capable and groomed to lead the next generation.</p>
+                  <br>
+                  <p>#ChampOut</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost85">#TheGreatHunt</a>
+                </h4>
+              </div>
+              <div id="blogpost85" class="panel-collapse collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>#TheGreatHunt</h1>
+
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor for The Daily Burne
+                  </em></p>
+
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 29 May, 2016</p>
+
+                  <hr>
+
+                  <!-- Post Content -->
+                  <p class="lead">I’m so cold, and I’m so hungry, but I have one goal in this world and it’s always been to provide the news; day, night, even in the face of death.</p>
+                  <p>My cohorts may have run away to fight for themselves, but I will be here until the very end, sitting at my computer here in this frozen office where the electricity continues to cut in and out, to fight with you against the SLPC and show them that we do have what it takes to survive.</p>
+                  <p>Todays forecast; -1 degree with a side of food shortage across the city.</p>
+                  <p>The current whereabouts are still unknown for the members of the SLPC as well as the winners of the Swinlympia.</p>
+                  <p>My bet is that they’re still on campus, hold up somewhere. Not that it matters since the most of us haven't had a decent meal in three days, nor do we have the energy now to even stop them.
+                    Mr. X still looms around the city, recruiting members to his cause in hopes of making a final assault - #TheGreatHunt - as he is calling it.</p>
+                  <p>A last ditch effort to foil the SLPC and steal from under them their precious resources.
+                    I don’t think I’ve ever said this, but I’ve definitely felt it for quite some time.</p>
+                  <p>Mr. X… I thank you. I’ll be the first to admit that I never believed you at the start, but your passion and fight was genuine, and for that, I thank you.</p>
+                  <p>My days are numbers here. I used the last of my petrol just to get into the office for I thought there might be people here, but I was mistaken. The temperature continues to drop and with no means of getting back across the city, this will be my final resting place.</p>
+                  <p>I will die beside my computer. Not the perfect human you were after, Mr. Swine… but I was definitely the perfect reporter.</p>
+                  <p>I hope you rot in hell, SLPC.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
                   <a data-toggle="collapse" href="#blogpost86">/My.Job.Is.Done/</a>
                 </h4>
               </div>
-              <div id="blogpost86" class="panel-collapse">
+              <div id="blogpost86" class="panel-collapse collapse">
                 <div class="panel-body fasghack">
                   <!-- Title -->
                   <h1>/My.Job.Is.Done/</h1>
